--- a/src/containers/App/App.css
+++ b/src/containers/App/App.css
@@ -20,12 +20,25 @@ header {
   font-size: 3em;
   text-shadow: -5px 0 4px black, 0 1px black, 1px 0 black, 0 -1px black;
 }
-h2 {
+.welcome {
   margin: 0;
   grid-area: b;
+  text-decoration: none;
+  color: #CACAD1;
+  text-shadow: 3px 2px black, 1px 2px 2px black;
+  font-size: 1.5em;
 }
 .favorites {
   grid-area: e;
+  text-decoration: none;
+  color: #CACAD1;
+  text-shadow: 3px 2px black, 1px 2px 2px black;
+  font-size: 1.5em;
+  width: 100px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  justify-self: center;
 }
 .log-link {
   grid-area: c;
@@ -33,6 +46,10 @@ h2 {
   color: #CACAD1;
   text-shadow: 3px 2px black, 1px 2px 2px black;
   font-size: 1.5em;
+  width: 135px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 .fa-sign-in-alt {
   margin-left: 1%;
