--- a/src/containers/App/App.css
+++ b/src/containers/App/App.css
@@ -46,10 +46,23 @@ header {
   color: #CACAD1;
   text-shadow: 3px 2px black, 1px 2px 2px black;
   font-size: 1.5em;
+  width: 100px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding-left: 10%;
+}
+.log-out {
+  grid-area: c;
+  text-decoration: none;
+  color: #CACAD1;
+  text-shadow: 3px 2px black, 1px 2px 2px black;
+  font-size: 1.5em;
   width: 135px;
   display: flex;
   justify-content: space-around;
   align-items: center;
+  padding-left: 10%;
 }
 .fa-sign-in-alt {
   margin-left: 1%;
