--- a/src/containers/Authentication/SignIn/SignIn.css
+++ b/src/containers/Authentication/SignIn/SignIn.css
@@ -12,8 +12,9 @@
   box-shadow: 10px 9px 20px 0px;
   display: flex;
   flex-direction: column;
-  padding-left: 3.5%;
-  padding-bottom: 10px;
+  margin-top: 20px;
+  margin-left: 20px;
+  padding-bottom: 20px;
   padding-top: 10px;
   position: absolute;
   width: 250px;
@@ -23,9 +24,10 @@
 .email {
   border-color:  #37424E;
   border-radius: 5px;
+  display: block;
   font-family: 'Roboto Slab', serif;
   height: 1.25rem;
-  margin-top: 10px ;
+  margin: 10px auto;
   padding-left: 5px;
   width: 75%;
 }
@@ -34,9 +36,10 @@
 .password {
   border-color:  #37424E;
   border-radius: 5px;
+  display: block;
   font-family: 'Roboto Slab', serif;
   height: 1.25rem;
-  margin-top: 10px;
+  margin: 10px auto;
   padding-left: 5px;
   width: 75%;
 }
@@ -45,17 +48,18 @@
   background-color: #990000;
   border-radius: 5px;
   color: #CACAD1;
+  display: block;
   font-size: 1.25rem;
-  margin-top: 40px;
+  margin: 10px auto;
   width: 76%;
   height: 2rem;
 }
 
 .sign-up {
   color: #990000;
+  display: block;
   font-size: 1.25rem;
-  margin-left: 3.75rem;
-  margin-top: 15px;
+  margin: 10px auto;
   text-decoration: none;
 }
 
