--- a/src/containers/Authentication/SignUp/SignUp.css
+++ b/src/containers/Authentication/SignUp/SignUp.css
@@ -11,8 +11,9 @@
   box-shadow: 10px 9px 20px 0px;
   display: flex;
   flex-direction: column;
-  padding-left: 3.5%;
-  padding-bottom: 10px;
+  margin-top: 20px;
+  margin-left: 20px;
+  padding-bottom: 20px;
   padding-top: 10px;
   position: absolute;
   width: 250px;
@@ -22,9 +23,10 @@
 .name {
   border-radius: 5px;
   border-color:  #37424E;
+  display: block;
   font-family: 'Roboto Slab', serif;
   height: 1.25rem;
-  margin-top: 10px;
+  margin: 10px auto;
   padding-left: 5px;
   width: 75%;
 }
@@ -35,8 +37,8 @@
 
 .sign-in {
   color: #990000;
+  display: block;
   font-size: 1.25rem;
-  margin-left: 3.75rem;
-  margin-top: 15px;
+  margin: 10px auto;
   text-decoration: none;
 }
